Fixed problem with animations
The animations were covering the login alert but I fixed it

--- a/assets/css/teacherHomeCSS.css
+++ b/assets/css/teacherHomeCSS.css
@@ -34,65 +34,57 @@ width: 200px;
  	border: 1px solid red;
  }
 
+/*-------------------------------------ANIMATIONS----------------------------------*/
 #chipPic{
-	
+   
 	width: 210px;
 	height: 200px;
-	background-image: url("../../assets/images/ChipHome.jpeg");
+	background-image: url("../../assets/images/chip.png");
 	background-repeat: no-repeat;
 	background-size: 200px 200px;
 	position: absolute;
 	margin-top: 55px;
 	margin-left: 365px;
 	border: none;
+	z-index: 1;
+	-webkit-animation-name: chip; /* Safari 4.0 - 8.0 */
+	-webkit-animation-duration: 4s; /* Safari 4.0 - 8.0 */
+	animation-name: chip;
+	animation-duration: 2s;
+	animation-iteration-count: infinite;
 }
 
+
 #chip2{
+   
 	width: 210px;
 	height: 200px;
 	float: right;
-	background-image: url("../../assets/images/Chip2.jpeg");
+	background-image: url("../../assets/images/chip2.png");
 	background-repeat: no-repeat;
 	background-size: 200px 200px;
 	position: absolute;
 	margin-top: 55px;
 	margin-left: 1000px;
-}
-/*-------------------------------------ANIMATIONS----------------------------------*/
-#chipPic {
-   
-    
-    position: absolute;
-    -webkit-animation-name: chip; /* Safari 4.0 - 8.0 */
-    -webkit-animation-duration: 4s; /* Safari 4.0 - 8.0 */
-    animation-name: chip;
-    animation-duration: 2s;
-     animation-iteration-count: infinite;
-}
-
-
-#chip2 {
-   
-    
-    position: absolute;
-    -webkit-animation-name: chipT; /* Safari 4.0 - 8.0 */
-    -webkit-animation-duration: 4s; /* Safari 4.0 - 8.0 */
-    animation-name: chipT;
-    animation-duration: 2s;
-     animation-iteration-count: infinite;
-}
+	z-index: 1;
+	-webkit-animation-name: chipT; /* Safari 4.0 - 8.0 */
+	-webkit-animation-duration: 4s; /* Safari 4.0 - 8.0 */
+	animation-name: chipT;
+	animation-duration: 2s;
+	animation-iteration-count: infinite;
+	}
 
 /* Safari 4.0 - 8.0 */
-@-webkit-keyframes chip {
+@-webkit-keyframes chip{
     0%   {left:0px; top:0px;}
    
-    50%  { top:1px;}
+    50%  { top:10px;}
   
-    100% {background-color:red; left:0px; top:0px;}
+    100% { left:0px; top:0px;}
 }
 
 /* Standard syntax */
-@keyframes chip {
+@keyframes chip{
     0%   { left:0px; top:0px;}
    
     50%  {  top:10px;}
@@ -100,16 +92,16 @@ width: 200px;
     100% { left:0px; top:0px;}
 }
 
-/* Safari 4.0 - 8.0 */
+ Safari 4.0 - 8.0 
 @-webkit-keyframes chipT {
     0%   {left:0px; top:0px;}
    
-    50%  { top:1px;}
+    50%  { top:10px;}
   
-    100% {background-color:red; left:0px; top:0px;}
+    100% {left:0px; top:0px;}
 }
 
-/* Standard syntax */
+ /*Standard syntax */
 @keyframes chipT {
     0%   { left:0px; top:0px;}
    
